--- a/devtools/client/themes/variables.css
+++ b/devtools/client/themes/variables.css
@@ -297,6 +297,7 @@
     --theme-selection-background: SelectedItem;
     --theme-selection-color: SelectedItemText;
     --theme-text-color-alt: CanvasText;
+    --theme-text-color-strong: CanvasText;
     --theme-text-selection-background: Highlight;
     --theme-text-selection-color: HighlightText;
     --theme-text-selection-unfocused-background: Highlight;
